; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_misc.c_test_getlru.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_misc.c_test_getlru.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDISMODULE_OK = common dso_local global i32 0, align 4
@REDISMODULE_READ = common dso_local global i32 0, align 4
@REDISMODULE_OPEN_KEY_NOTOUCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test_getlru(i32* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %12, 2
  br i1 %13, label %14, label %18

14:                                               ; preds = %3
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @RedisModule_WrongArity(i32* %15)
  %17 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %17, i32* %4, align 4
  br label %36

18:                                               ; preds = %3
  %19 = load i32**, i32*** %6, align 8
  %20 = getelementptr inbounds i32*, i32** %19, i64 1
  %21 = load i32*, i32** %20, align 8
  store i32* %21, i32** %8, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = load i32, i32* @REDISMODULE_READ, align 4
  %25 = load i32, i32* @REDISMODULE_OPEN_KEY_NOTOUCH, align 4
  %26 = or i32 %24, %25
  %27 = call i32* @RedisModule_OpenKey(i32* %22, i32* %23, i32 %26)
  store i32* %27, i32** %9, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = call i32 @RedisModule_GetLRUOrLFU(i32* %28, i64* %11, i64* %10)
  %30 = load i32*, i32** %5, align 8
  %31 = load i64, i64* %10, align 8
  %32 = call i32 @RedisModule_ReplyWithLongLong(i32* %30, i64 %31)
  %33 = load i32*, i32** %9, align 8
  %34 = call i32 @RedisModule_CloseKey(i32* %33)
  %35 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %18, %14
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @RedisModule_WrongArity(i32*) #1

declare dso_local i32* @RedisModule_OpenKey(i32*, i32*, i32) #1

declare dso_local i32 @RedisModule_GetLRUOrLFU(i32*, i64*, i64*) #1

declare dso_local i32 @RedisModule_ReplyWithLongLong(i32*, i64) #1

declare dso_local i32 @RedisModule_CloseKey(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
